classDiagram
    direction TB

    %% ============================================
    %% ORGANIZATION & USERS
    %% ============================================

    class Organization {
        +UUID id
        +String name
        +String slug
        +Instant createdAt
    }

    class User {
        +UUID id
        +String email
        +String passwordHash
        +PlatformRole platformRole
        +Instant createdAt
    }

    class OrganizationMembership {
        +UUID userId
        +UUID organizationId
        +OrgRole role
        +Instant joinedAt
    }

    %% ============================================
    %% PROJECT & APPLICATION (Cross-Module via UUID)
    %% ============================================

    class Project {
        +UUID id
        +String name
        +UUID teamId
        +String k8sNamespace
        +Instant createdAt
        +Instant updatedAt
    }

    class Application {
        +UUID id
        +String name
        +UUID projectId
        +String gitRepoUrl
        +String buildBranch
        +String dockerfilePath
        +String startCommand
        +Integer containerPort
        +Map~String,String~ envVars
    }

    %% ============================================
    %% BUILD & DEPLOYMENT
    %% ============================================

    class Build {
        +UUID id
        +UUID applicationId
        +String commitHash
        +BuildStatus status
        +String imageTag
        +String jobName
        +Instant startTime
        +Instant endTime
    }

    class Deployment {
        +UUID id
        +UUID applicationId
        +String version
        +int replicas
        +DeploymentStatus status
        +String ingressUrl
        +Instant deployedAt
        +List~DeploymentStage~ stages
    }

    class DeploymentStage {
        +UUID id
        +String name
        +DeploymentStatus status
        +Instant startTime
        +Instant endTime
    }

    %% ============================================
    %% ENUMERATIONS
    %% ============================================

    class BuildStatus {
        <<enumeration>>
        PENDING
        RUNNING
        SUCCESS
        FAILED
        CANCELLED
    }

    class DeploymentStatus {
        <<enumeration>>
        IN_PROGRESS
        HEALTHY
        UNHEALTHY
        FAILED
        STOPPED
        RESTARTING
    }

    %% ============================================
    %% RELATIONSHIPS (Architecture Perspective)
    %% ============================================

    Organization "1" --> "*" OrganizationMembership : has
    User "1" --> "*" OrganizationMembership : joins
    Project "1" ..> "1" Application : Cross-Module Link (UUID)
    Application "1" ..> "1" Build : Cross-Module Link (UUID)
    Build "1" ..> "1" Deployment : Logic Link
    Deployment "1" *-- "*" DeploymentStage : contains
